# sea_orm_json_datetime_example

./: Cargo.toml
src/: main.rs
src/entity/: mod.rs  prelude.rs  test_datetime.rs
