[package]
name = "sea_orm_json_datetime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.0.0-rc.3"

env_logger="^0.9"
log="^0.4"
chrono = { version = "^0.4", features = ["serde"] }
dotenv = "0.15"
serde = "^1.0"
serde_json = "^1.0"
# sqlx = { version = "^0.5", features = ["runtime-actix-native-tls", "mysql", "chrono", "json"]}

[dependencies.sea-orm]
version = "^0.6.0"
default-features = false
features = ["macros", "runtime-actix-native-tls", "debug-print", "with-json", "with-chrono"]

[features]
default = ["sqlx-mysql"]
sqlx-mysql = ["sea-orm/sqlx-mysql"]
